--- a/mobile_ch4/bounty-hunter-list.html
+++ b/mobile_ch4/bounty-hunter-list.html
@@ -25,6 +25,12 @@
                     <h2>Page<span class='num'></span> of <span class='of'></span></h2>
                     <a href='#' data-role='button' data-icon='forward' data-iconpos='right' data-inline='true' data-mini='true' class='ui-disabled'>Next</a>
                 </div>
+                <div id='results'></div>
+                <div class='ui-bar ui-bar-cfooter-bar'>
+                    <a href='#' data-role='button' data-icon='back' data-inline='true' data-mini='true' class='ui-disabled'>Prev</a>
+                    <h2>Page<span class='num'></span> of <span class='of'></span></h2>
+                    <a href='#' data-role='button' data-icon='forward' data-iconpos='right' data-inline='true' data-mini='true' class='ui-disabled'>Next</a>
+                </div>
             </div>
             <!-- /content -->
 
